--- a/Restaurant_Project/src/index.html
+++ b/Restaurant_Project/src/index.html
@@ -17,28 +17,28 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">My new Restaurant</a>
+            <a class="navbar-brand" href="#"><strong>My new Restaurant</strong></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Register</a></li>
-                <li><a href="#myModal" data-toggle="modal" data-target="#myModal"><span
-                        class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <li><a href="#registerModal" data-toggle="modal" data-target="#registerModal"><span
+                        class="glyphicon glyphicon-user"></span><strong> Register</strong></a></li>
+                <li><a href="#loginModal" data-toggle="modal" data-target="#loginModal"><span
+                        class="glyphicon glyphicon-log-in"></span><strong> Login</strong></a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-<!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<!-- Login Modal -->
+<div id="loginModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
 
-        <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Please Login Here</h4>
+                <h4 class="modal-title">Login </h4>
             </div>
             <div class="modal-body">
                 <form role="form">
@@ -61,11 +61,51 @@
     </div>
 </div>
 
-<header><h1><strong>Welcome to the Restaurant</strong></h1></header>
-<footer><h5>Copyright: Copyrights</h5></footer>
+<!-- Register Modal -->
+<div id="registerModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Register</h4>
+            </div>
+            <div class="modal-body">
+                <form role="form">
+                    <div class="form-group">
+                        <label for="email">Email address:</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="pwd">Password:</label>
+                        <input type="password" class="form-control" id="pwd">
+                    </div>
+                    <div class="form-group">
+                        <label for="pwd">Confirm Password:</label>
+                        <input type="password" class="form-control" id="pwd">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
 
+    </div>
+</div>
+
+<header><h1><strong>Welcome to the Restaurant</strong></h1></header>
+
+<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+    <div class="container">
+        <div class="navbar-text ">
+            <p><h5><strong>@2015: My New Restaurant. </strong></h5></p>
+        </div>
+    </div>
+</nav>
 
 <script src="../js/jquery-1.11.3.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 </body>
+
 </html>
